# GoFileShare

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py
Downloads/: readme.txt
Shares/: readme.txt
Uploads/: readme.txt
