[tool.poetry]
name = "cloudfileshare"
version = "0.1.0"
description = ""
authors = ["Mike Lu <mcumaple@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gofilepy-api = "^0.2.7"
gofilepy = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
